[package]
name = "eldiron_scepter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Automation command model and live command reference for Eldiron Creator."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
