[package]
name = "eldiron-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared code and common types for the Eldiron applications."
keywords = ["game", "rpg", "engine", "shared", "eldiron"]
readme = "README.md"

[dependencies]
theframework.workspace = true
rusterix = { path = "../rusterix", version = "0.9.4", default-features = false }
codegridfx.workspace = true
scenevm = { path = "../scenevm", version = "0.9.4", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
vectorize = "0.2.0"
rayon = "1"
rand = "0.9"
fontdue = "0.9.3"
line_drawing = "1.0.0"
indexmap = { version = "2", features = ["serde"], default-features = true }
noiselib = "0.2.3"
regex = "1"
num_cpus = "1.16.0"
tilegraph = { path = "../tilegraph", version = "0.9.4" }
buildergraph = { path = "../buildergraph", version = "0.9.4" }

vek = { version = "0.17", default-features = false, features = ["rgba"] }
earcutr = "0.5"
rect_packer = "0.2.1"
rustc-hash = "2.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Window'] }

[features]
default = ["graphics"]
graphics = ["rusterix/graphics", "scenevm/gpu"]
