[package]
name = "eldiron-source"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Source-first compiler for Eldiron projects."
keywords = ["game", "rpg", "source", "compiler", "eldiron"]

[[bin]]
name = "eldiron-source"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", version = "0.91.0", package = "eldiron-shared" }
rusterix = { path = "../rusterix", version = "0.91.0" }
clap = { version = "4.5", features = ["derive"] }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
uuid = { version = "1.18", features = ["v4"] }
vek = "0.17"
