[package]
name = "theframework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A cross platform application UI framework."
keywords = ["application", "framework", "graphics", "user-interface", "gui"]
readme = "README.md"
exclude = ["Xcode"]

[dependencies]
log = "0.4"
fontdue = "0.9.3"
maths-rs = { version = "0.2.6", features = [
    "short_types",
    "short_hand_constructors",
    "casts",
    "serde",
    "hash",
] }
vek = { version = "0.17.1", default-features = true }
winit = { version = "0.30", optional = true }
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
png = "0.17"
rustc-hash = "2.1.1"
rfd = { version = "0.17.1", optional = true }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"], optional = false }
serde_json = { version = "1.0", optional = false }
flate2 = { version = "1.0" }
rayon = { version = "1" }
vectorize = "0.2.0"
indexmap = { version = "2", features = ["serde"], default-features = true }
zeno = { version = "0.3.1", optional = true }
lazy_static = "1.5.0"
unicode-segmentation = "1.11.0"
half = { version = "2.4", features = ["serde"] }
flags = "0.1.5"
softbuffer = { version = "0.4.6", optional = true }
web-time = "1.1.0"
markdown = "1.0.0"
font-kit = { version = "0.14.3", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
    "js",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.4.1"
syntect = "5.2.0"
log4rs = { version = "1.3.0", features = [
    "compound_policy",
    "fixed_window_roller",
    "rolling_file_appender",
    "size_trigger",
], default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
getrandom_0_2 = { package = "getrandom", version = "0.2.16", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3.3", features = [
    "wasm_js",
] }
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "Performance"] }

[features]
ui = ["rfd", "rayon", "zeno"]
winit_app = ["winit", "softbuffer"]
log = ["log4rs"]
i18n = ["font-kit"]

default = ["winit_app"]
rayon = []
