[package]
name = "tilegraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tools for Eldiron portable tile graphs."

[[bin]]
name = "tilegraph-cli"
path = "src/main.rs"

[dependencies]
tilegraph = { path = "../tilegraph", version = "0.9.2" }
theframework.workspace = true
serde_json = "1.0"
toml = "0.9"
image = { version = "0.25.8", default-features = false, features = ["png"] }
