[package]
name = "tilegraph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Human-readable graph format, runtime, and CLI for Eldiron tile graphs."
readme = "README.md"

[dependencies]
theframework = { path = "../theframework", version = "0.9.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
rayon = "1"
rustc-hash = "2.1.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
